--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "licenses": [
     {
-      "type": "MIT",
-      "url": "https://github.com/ebullion/grunt-pakman/blob/master/LICENSE-MIT"
+      "type": "APACHE",
+      "url": "https://github.com/ebullion/grunt-pakman/blob/master/LICENSE-APACHE"
     }
   ],
   "engines": {
